@@ -18,3 +18,4 @@
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/rssyl_prefs.c;  ) > 0.5.0cvs9.patchset
 ( cvs diff -u -r 1.1.2.41 -r 1.1.2.42 src/feed.c;  cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/feed.h;  ) > 0.5.0cvs10.patchset
 ( cvs diff -u -r 1.1.2.42 -r 1.1.2.43 src/feed.c;  ) > 0.6.0cvs1.patchset
+( cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/feed.h;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/rssyl_cb_menu.c;  ) > 0.6.0cvs2.patchset
